--- a/data-wrangling.ipynb
+++ b/data-wrangling.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=images/highres.jpg alt=\"170\" width=\"850\"/>"
+    "<img src=\"images/highres.jpg\" alt=\"170\" width=\"850\"/>"
    ]
   },
   {
