Error handling OK

--- a/data-wrangling.ipynb
+++ b/data-wrangling.ipynb
@@ -627,9 +627,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Setting up the connection to the database\n",
+    "from src/login \n",
     "\n",
-    "client = MongoClient()\n",
+    "# Setting up the local connection to the database\n",
+    "\n",
+    "client = MongoClient(mongodb+srv://ireneisdoomed:<password>@unanuevanormalidad-xvinr.mongodb.net/test?retryWrites=true&w=majority)\n",
     "\n",
     "def insertRecord(dictionary):\n",
     "    db = client[\"unanuevanormalidad\"] # Creo db\n",
