Mongo Atlas is set

--- a/data-wrangling.ipynb
+++ b/data-wrangling.ipynb
@@ -623,31 +623,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src/login \n",
+    "# Setting up the connection to the database\n",
     "\n",
-    "# Setting up the local connection to the database\n",
-    "\n",
-    "client = MongoClient(mongodb+srv://ireneisdoomed:<password>@unanuevanormalidad-xvinr.mongodb.net/test?retryWrites=true&w=majority)\n",
+    "client = MongoClient()\n",
     "\n",
     "def insertRecord(dictionary):\n",
     "    db = client[\"unanuevanormalidad\"] # Creo db\n",
     "    collection = db[\"data\"] # Creo collection\n",
-    "    collection.insert_many(dictionary)"
+    "    collection.insert_many(dictionary)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Final dictionary is added to the database\n",
     "\n",
-    "insertRecord(data_dict)\n"
+    "#insertRecord(data_dict)"
    ]
   }
  ],
